[package]
name = "spyglass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
rayon = "1.7.0"
reqwest = { version = "0.11.17", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls"
] }
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
thiserror = "1.0.40"
trust-dns-resolver = "0.22.0"
urlencoding = "2.1.2"
